--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
+    "@tippyjs/react": "^4.2.6",
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.4",
     "date-fns": "^2.29.3",
@@ -21,7 +23,8 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-toastify": "^9.1.2"
+    "react-toastify": "^9.1.2",
+    "react-tooltip": "^5.11.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
