--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@tippyjs/react": "^4.2.6",
     "@types/react-dom": "18.0.11",
-    "axios": "^1.3.4",
+    "axios": "^1.3.5",
     "date-fns": "^2.29.3",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
@@ -23,6 +23,7 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-paginate": "^8.2.0",
     "react-toastify": "^9.1.2",
     "react-tooltip": "^5.11.1"
   },
