--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-dom": "18.2.0",
     "react-paginate": "^8.2.0",
     "react-toastify": "^9.1.2",
-    "react-tooltip": "^5.11.1"
+    "react-tooltip": "^5.11.1",
+    "swr": "^2.1.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
